@@ -14,6 +14,7 @@ Poeple/companies who were/are contributing code to cocos2d for iPhone (alphabeti
     * Alejandro Cura: author of AccelViewPortDemo
 	* Alex Winston: author of ParticleSnow
 	                patches for CocosNode
+    * Alia Mc.Cutcheon: scale & rotate order fixed in CocosNode.m
 	* Andy Fitter: patches for Texture2D
 	* Anton Zemlyanov: patches for MenuItemToggle that supports selectedIndex
     * Brian Hammond: patches for Demos
